--- a/public/locales/cs/component.json
+++ b/public/locales/cs/component.json
@@ -1,7 +1,8 @@
 {
-	"form": {
+	"input": {
 		"submit": "Odeslat",
-		"pickFile": "Vyberte soubor"
+		"pickFile": "Vyberte soubor",
+		"fileSizeError": "Vyberte soubor menší než {{maxFileSize}} KB."
 	},
 	"header": {
 		"logout": "Odhlásit"
