--- a/public/locales/cs/hook.json
+++ b/public/locales/cs/hook.json
@@ -1,7 +1,11 @@
 {
 	"imageService": {
 		"upload": "Obrázek byl nahrán",
+
 		"remove": "Obrázek byl odstraněn",
 		"order": "Pořadí obrázků bylo změněno"
+	},
+	"galleryService": {
+		"edit": "Galerie byla upravena"
 	}
 }
