Fix translation key

--- a/public/locales/cs/page.json
+++ b/public/locales/cs/page.json
@@ -1,9 +1,9 @@
 {
 	"login": {
 		"login": "Přihlášení",
-		"logIn": "Přihlásit",
 		"username": "Jméno",
-		"password": "Heslo"
+		"password": "Heslo",
+		"submit": "Přihlásit"
 	},
 	"gallery": {
 		"properties": "Vlastnosti",
