--- a/public/locales/en/page.json
+++ b/public/locales/en/page.json
@@ -1,7 +1,7 @@
 {
 	"login": {
 		"login": "Login",
-		"logIn": "Login",
+		"submit": "Submit",
 		"username": "Username",
 		"password": "Password"
 	},
